--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>About Me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -31,14 +33,16 @@
         </p>
 
     </section>
-    <section class="sidebar">
+
+    <!-- <section class="sidebar">
         <div id="connect">
             <h2>Connect with me!</h2>
             <img src="assets/images/github.png" class="social" alt="Github Icon">
             <img src="assets/images/linkedin.png" class="social" alt="LinkedIn Icon">
             <img src="assets/images/stack.png" class="social" alt="Stack Overflow Icon">
         </div>
-    </section>
+    </section> -->
+    
 </div>
     <footer>
         <div class="container">
