added placeholder photos

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,28 +27,28 @@
             <h1>Portfolio</h1>
 
         <div class="work">
-            <img src="assets/images/me.jpg" class="auth-image" alt="Alex Bowen">
+            <img src="https://picsum.photos/g/200/200" alt="placeholder">
 
             <h3>Hangman</h3>
         </div>
 
         <div class="work">
-            <img src="assets/images/me.jpg" class="auth-image" alt="RPG game">
+            <img src="https://picsum.photos/g/200/200" alt="placeholder">
 
             <h3>RPG Game</h3>
         </div>
         <div class="work">
-            <img src="assets/images/me.jpg" class="auth-image" alt="trivia game">
+            <img src="https://picsum.photos/g/200/200" alt="placeholder">
 
             <h3>Trivia Game</h3>
         </div>
         <div class="work">
-            <img src="assets/images/me.jpg" class="auth-image" alt="Info Widget">
+            <img src="https://picsum.photos/g/200/200" alt="placeholder">
 
             <h3>Rutgers Info Widget</h3>
         </div>
         <div class="work">
-            <img src="assets/images/me.jpg" class="auth-image" alt="Rock Paper Scissors" width=200px height=200px;>
+            <img src="https://picsum.photos/g/200/200" alt="placeholder">
 
             <h3>Rock Paper Scissors</h3>
         </div>
