--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <h1>Portfolio</h1>
 
         <div class="work">
-            <img src="https://picsum.sphotos/g/200/200" alt="placeholder">
+            <img src="https://picsum.photos/g/200/200" alt="placeholder">
 
             <h3>Hangman</h3>
         </div>
